--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "dayjs": "^1.11.7",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
